--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -56,18 +56,18 @@ jobs:
 
       ### Configure cloud credentials
 
-      # - name: 'Configure Azure credentials'
-      #   if: steps.list-changed.outputs.stdout
-      #   uses: azure/login@v2
-      #   with:
-      #     client-id: ${{ secrets.AZURE_CLIENT_ID }}
-      #     tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-      #     subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - name: 'Configure Azure credentials'
+        if: steps.list-changed.outputs.stdout
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      # - name: Verify Azure credentials
-      #   if: steps.list-changed.outputs.stdout
-      #   run: |
-      #     az account show
+      - name: Verify Azure credentials
+        if: steps.list-changed.outputs.stdout
+        run: |
+          az account show
 
       ### Run the Terraform preview via Terramate in each changed stack
 
