--- a/.github/workflows/drift-detection.yml
+++ b/.github/workflows/drift-detection.yml
@@ -75,6 +75,8 @@ jobs:
         id: drift-detect
         run: |
           terramate run \
+            --enable-sharing \
+            --mock-on-fail \
             --sync-drift-status \
             --terraform-plan-file=drift.tfplan \
             --continue-on-error \
