--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -56,29 +56,28 @@ jobs:
 
       ### Configure cloud credentials
 
-      - name: 'configure azure credentials'
-        if: steps.list-changed.outputs.stdout
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.azure_client_id }}
-          tenant-id: ${{ secrets.azure_tenant_id }}
-          subscription-id: ${{ secrets.azure_subscription_id }}
+      # - name: 'configure azure credentials'
+      #   if: steps.list-changed.outputs.stdout
+      #   uses: azure/login@v2
+      #   with:
+      #     client-id: ${{ secrets.azure_client_id }}
+      #     tenant-id: ${{ secrets.azure_tenant_id }}
+      #     subscription-id: ${{ secrets.azure_subscription_id }}
 
-      - name: verify azure credentials
-        if: steps.list-changed.outputs.stdout
-        run: |
-          az account show
+      # - name: verify azure credentials
+      #   if: steps.list-changed.outputs.stdout
+      #   run: |
+      #     az account show
 
       ### Run the Terraform preview via Terramate in each changed stack
 
       - name: Run Terraform init in all changed stacks
         if: steps.list-changed.outputs.stdout
         run: |
-          terramate run -- terraform init
-        # terramate script run \
-        #   --changed \
-        #   --parallel 1 \
-        #   init
+          terramate script run \
+            --changed \
+            --parallel 1 \
+            init
         env:
           GITHUB_TOKEN: ${{ github.token }}
           ARM_USE_OIDC: true
@@ -89,24 +88,12 @@ jobs:
       - name: Plan Terraform changes in changed stacks
         if: steps.list-changed.outputs.stdout
         run: |
-          terramate run \
-            --enable-sharing \
-            --mock-on-fail \
-            --parallel 5 \
-            --changed \
-            --sync-preview \
-            --terraform-plan-file=out.tfplan \
-            --continue-on-error \
-            -- \
-            terraform plan -out out.tfplan -detailed-exitcode -lock=false
-        # terramate script run \
-        # --enable-sharing \
-        # --mock-on-fail \
-        # --changed \
-        # --parallel 5 \
-        # --continue-on-error \
-        # -- \
-        # preview
+          terramate script run \
+          --changed \
+          --parallel 5 \
+          --continue-on-error \
+          -- \
+          preview
         env:
           GITHUB_TOKEN: ${{ github.token }}
           ARM_USE_OIDC: true
