feat: add parallism to workflows

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -90,6 +90,7 @@ jobs:
         run: |
           terramate script run \
           --changed \
+          --parallel 5 \
           --continue-on-error \
           -- \
           preview
