--- a/.github/workflows/drift-detection.yml
+++ b/.github/workflows/drift-detection.yml
@@ -35,6 +35,8 @@ jobs:
 
       - name: Install asdf
         uses: asdf-vm/actions/setup@v3
+        with:
+          asdf_branch: v0.15.0
 
       - name: Install Terraform with asdf
         run: |
